--- a/app/src/main/res/drawable/aurora_button.xml
+++ b/app/src/main/res/drawable/aurora_button.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient
                 android:angle="45"
-                android:startColor="@color/aurora_purple"
+                android:startColor="@color/aurora_mint"
                 android:centerColor="@color/aurora_blue"
                 android:endColor="@color/aurora_cyan"
                 android:type="linear" />
@@ -15,9 +15,9 @@
         <shape>
             <gradient
                 android:angle="135"
-                android:startColor="@color/aurora_blue"
-                android:centerColor="@color/aurora_cyan"
-                android:endColor="@color/aurora_green"
+                android:startColor="@color/aurora_mint"
+                android:centerColor="@color/aurora_blue"
+                android:endColor="@color/aurora_cyan"
                 android:type="linear" />
             <corners android:radius="16dp" />
         </shape>
