--- a/app/src/main/res/drawable/aurora_button_ripple.xml
+++ b/app/src/main/res/drawable/aurora_button_ripple.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/aurora_purple">
+    android:color="@color/aurora_cyan">
     <item android:id="@android:id/background">
         <shape>
-            <solid android:color="@color/aurora_purple" />
+            <solid android:color="@color/aurora_mint" />
             <stroke
                 android:width="1dp"
                 android:color="@color/aurora_cyan" />
