--- a/app/src/main/res/drawable/aurora_card.xml
+++ b/app/src/main/res/drawable/aurora_card.xml
@@ -4,10 +4,10 @@
         android:angle="45"
         android:startColor="@color/aurora_dark_gray"
         android:centerColor="@color/aurora_gray"
-        android:endColor="@color/aurora_silver"
+        android:endColor="@color/aurora_dark_gray"
         android:type="linear" />
     <corners android:radius="16dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/aurora_purple" />
+        android:color="@color/aurora_cyan" />
 </shape>
