--- a/app/src/main/res/drawable/neon_primary_button.xml
+++ b/app/src/main/res/drawable/neon_primary_button.xml
@@ -4,12 +4,12 @@
     <item android:id="@android:id/background">
         <shape>
             <gradient
-                android:startColor="@color/aurora_purple"
-                android:endColor="@color/aurora_pink"
+                android:startColor="@color/aurora_mint"
+                android:endColor="@color/aurora_cyan"
                 android:angle="0" />
             <stroke
                 android:width="1dp"
-                android:color="@color/aurora_pink" />
+                android:color="@color/aurora_cyan" />
             <corners android:radius="18dp" />
         </shape>
     </item>
