--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -166,7 +166,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
                                 android:text="@string/mode_main"
-                                android:textColor="@color/white"
+                            android:textColor="@color/text_primary"
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
 
@@ -175,7 +175,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
                                 android:text="@string/mode_main_desc"
-                                android:textColor="@color/aurora_silver"
+                            android:textColor="@color/text_secondary"
                                 android:textSize="11sp" />
 
                         </LinearLayout>
@@ -215,7 +215,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
                                 android:text="@string/mode_display"
-                                android:textColor="@color/white"
+                            android:textColor="@color/text_primary"
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
 
@@ -224,7 +224,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
                                 android:text="@string/mode_display_desc"
-                                android:textColor="@color/aurora_silver"
+                            android:textColor="@color/text_secondary"
                                 android:textSize="11sp" />
 
                         </LinearLayout>
