--- a/app/src/main/res/layout/activity_main_mobile.xml
+++ b/app/src/main/res/layout/activity_main_mobile.xml
@@ -238,7 +238,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="@string/mode_main"
-                            android:textColor="@color/white"
+                            android:textColor="@color/text_primary"
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
@@ -247,7 +247,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                             android:text="@string/mode_main_desc"
-                            android:textColor="@color/aurora_silver"
+                            android:textColor="@color/text_secondary"
                             android:textSize="11sp" />
 
                     </LinearLayout>
@@ -287,7 +287,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="@string/mode_display"
-                            android:textColor="@color/white"
+                            android:textColor="@color/text_primary"
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
@@ -296,7 +296,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                             android:text="@string/mode_display_desc"
-                            android:textColor="@color/aurora_silver"
+                            android:textColor="@color/text_secondary"
                             android:textSize="11sp" />
 
                     </LinearLayout>
