--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -2,8 +2,10 @@
 <shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
     
     <!-- Share Navigation Target -->
-    <share-target android:targetClass="com.phantom.carnavrelay.RelayActivity">
+    <share-target android:targetClass="com.phantom.carnavrelay.ShareReceiverActivity">
         <data android:mimeType="text/plain" />
+        <data android:mimeType="text/*" />
+        <data android:mimeType="text/uri-list" />
         <category android:name="android.shortcut.conversation" />
     </share-target>
     
